[package]
name = "veilid_test_node"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1", features = ["full"] }
ctrlc = "3.4"
flume = "0.12"
serde_json = "1.0"
veilid-core = "0.5.2"
winapi = {version = "0.3", features = ["errhandlingapi"] }
base64 = "0.21" # or latest version
# better error Messages
anyhow = "1.0"